tests/unit/evaluation/flatzinc/test_array_index-bad.err_exp
test_array_index-bad.fzn:7: error: array index out of range: 6
