tests/unit/evaluation/flatzinc/test_array_index-bad.fzn
% RUNS ON flatzinc
% RUNS ON fzn_fd
% RUNS ON fzn_fdlp
% RUNS ON fzn_lazyfd
array[1 .. 5] of var 1 .. 6: a;

constraint int_lin_eq([ 1, 1, 1 ], [ a[1], a[3], a[6] ], 9);

solve satisfy;
